2004-05-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::FileTree): Make the file column
	take up available space with set_expand(true).

2004-05-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (AC_INIT): Bump version to 0.8.
	(PKG_CHECK_MODULES): Require gconfmm-2.6 >= 2.6.1.
	(REGEXXER_GCONFMM_VALUE_HACK): Remove.

	* src/miscutils.{cc,h}
	(check_for_broken_gconfmm_value_changed): Remove.
	(has_broken_gconfmm_value_changed): Remove.

	* src/main.cc (main): Remove call to gconfmm bug runtime test.

	* src/filebuffer.cc (on_config_value_changed): Remove hack.
	* src/filetree.cc (on_config_value_changed): ditto
	* src/mainwindow.cc (on_config_value_changed): ditto.
	* src/prefdialog.{cc,h} (on_config_value_changed_hack): Remove.

2004-05-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (on_select_folder): Use Gtk::FileChooserDialog
	instead of the old Gtk::FileSelection.

2004-05-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/prefdialog.glade: Removes the <requires lib="gnome"/> line
	that was inserted by buggy glade-2.

2004-05-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc: Replace instances of `...' in message strings
	with "...".  Since the translator is supposed to use double-quotes
	it would be confusing to use single quotes in the original string.
	* src/mainwindow.cc: ditto
	* src/prefdialog.cc: ditto.

2004-05-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (button_find_files): Use a custom image and
	label instead of a stock item as button content, so that it can be
	more clearly distinguished from button_find_matches.

2004-05-13  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade: Reintroduce tearoff menu items by manually
	inserting the necessary XML elements.

2004-05-12  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/fileio.cc: Remove the libgnome-vfsmm code already enclosed
	by #if 0 ... #endif.  It's all in the CVS history anyway.